created employee class and installed inquirer

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/TREVTAL/M10---Profile-Generator/issues"
   },
-  "homepage": "https://github.com/TREVTAL/M10---Profile-Generator#readme"
+  "homepage": "https://github.com/TREVTAL/M10---Profile-Generator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
+  }
 }
