--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
-  "name": "m10---profile-generator",
+  "name": "m10b",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "tests"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TREVTAL/M10---Profile-Generator.git"
-  },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TREVTAL/M10---Profile-Generator/issues"
-  },
-  "homepage": "https://github.com/TREVTAL/M10---Profile-Generator#readme",
   "dependencies": {
-    "inquirer": "^8.2.4"
+    "fs": "^0.0.1-security",
+    "inquirer": "^8.2.4",
+    "node-fetch": "^2.6.1"
   }
 }
