--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "type": "module",
   "keywords": [],
@@ -13,6 +13,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.4",
+    "jest": "^29.0.2",
     "node-fetch": "^2.6.1"
   }
 }
